--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>易加</title>
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" type="text/css" href="style/main.css">
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<header>
@@ -24,5 +26,66 @@
 			</div>
 		</div>
 	</header>
+	<div id="bannerbox">
+		<div id="container">
+			<a href=""><img src="images/ban1.png"></a>
+			<a href=""><img src="images/ban2.png" style="display:none"></a>
+			<a href=""><img src="images/ban3.png" style="display:none"></a>
+			<div class="btns">
+				<span class="on"></span>
+				<span></span>
+				<span></span>
+			</div>			
+		</div>
+		<div class="pdisplay">
+			<div class="displaytitle">
+				<img src="images/tit1.png">
+			</div>
+			<div id="container2">
+				<div class="displaypic1">
+				   <div class="displayleft">
+					<img src="images/111.png">
+				   </div>
+				   <div class="displayright">
+					<img src="images/pro.png">
+				   </div>
+				   <div class="displayleft">
+					<img src="images/111.png">
+				   </div>
+				   <div class="displayright">
+					<img src="images/pro.png">
+			       </div>
+			       <div class="displayleft">
+			        <img src="images/111.png">
+			       </div>
+			       <div class="displayright">
+			       	<img src="images/pro.png">
+			       </div>
+			       <div class="displayleft">
+			        <img src="images/111.png">
+			       </div>
+			       <div class="displayright">
+			       	<img src="images/pro.png">
+			       </div>
+				</div>
+			</div>
+			<img src="images/pre.png" class="arrow pre">
+			<img src="images/next.png" class="arrow next">
+		</div>
+	</div>
+	<div id="aboutus">
+		<div class="comWidth">
+			<div class="aboutus_content">
+				公司的加工服务可以提供从样件设计、逆向工程（数据反求）到3D打印制造成品的完整解决方案，为众多有需求的的企业提供技术支持。<br>
+				我们的近期发展目标是——中型专业工业3D打印设备制造商。公司将坚持走技术型路线。以技术为基础，以服务为先导、以客户为根本，实现共赢发展。我们的团队一直专注于为客户<br>
+				提供真正的3D打印设备和加工服务。
+			</div>
+			<div class="showus">
+				<img src="images/ab1.png" style="left: 633px; top: 0px; width: 322px; opacity: 1; z-index: 2;" class="img1">
+				<img src="images/ab2.png" style="left: 55px; top: 19px; width: 322px; opacity: 1; z-index: 2;" class="img2">
+				<img src="images/ab3.png" style="left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;" class="img3">
+			</div>
+		</div>
+	</div>
 </body>
 </html>
