--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="navlist">
 				<ul>
 					<li class="active"><a href="">首页</a></li>
-					<li><a href="">关于我们</a></li>
+					<li><a href="about.html">关于我们</a></li>
 					<li><a href="">产品展厅</a></li>
 					<li><a href="">解决方案</a></li>
 					<li><a href="">联系我们</a></li>
@@ -75,6 +75,9 @@
 	</div>
 	<div id="aboutus">
 		<div class="comWidth">
+		    <div class="aboutus_title">
+		    	<img src="images/tit2.png">
+		    </div>
 			<div class="aboutus_content">
 				公司的加工服务可以提供从样件设计、逆向工程（数据反求）到3D打印制造成品的完整解决方案，为众多有需求的的企业提供技术支持。<br>
 				我们的近期发展目标是——中型专业工业3D打印设备制造商。公司将坚持走技术型路线。以技术为基础，以服务为先导、以客户为根本，实现共赢发展。我们的团队一直专注于为客户<br>
@@ -86,6 +89,90 @@
 				<img src="images/ab3.png" style="left: 350px; top: 55px; width: 322px; opacity: 1; z-index: 3;" class="img3">
 			</div>
 		</div>
+	</div>
+	<div id="newscenter">
+		<div class="comWidth">
+			<div class="news_title">
+				<img src="images/tit3.png">
+			</div>
+			<div class="news_content">
+			  <div class="newsleftbox">
+				<div class="news_left">
+					<div class="newspic">
+						<img src="images/newpic.png">
+					</div>
+					<div class="newslist">
+						<a href=""><h2>北京易加3D打印应用与制造联合实验室成立</h2></a>
+						<a href="" class="info">6月9日，“西北师大—北京易加 3D打印应用与制造联合实验室”揭牌成立我司教育应用部核心成员与校方副校长刘复兴教...</a>
+						<span>2015-06-24</span>
+					</div>
+				</div>
+				<div class="news_left2">
+					<div class="newspic">
+						<img src="images/newpic1.png">
+					</div>
+					<div class="newslist">
+						<a href=""><h2>北京易加Einstart-L获UL安全认证进军美加市场</h2></a>
+						<a href="" class="info">在中国成都第三届世界3D打印技术产业大会暨第二届世界3D打印博览会中，北京易加旗下最新3D打印机Einstart-L获UL...</a>
+						<span>2015-06-06</span>
+					</div>
+				</div>
+			  </div>
+				<div class="newsrightlist">
+					<div class="news1">
+						<div class="num"></div>
+						<div class="contentnews">
+							<a href=""><h2>北京易加攻坚细胞3D打印与3D打印材料</h2></a>
+							<a href="">5月18日晚，有着“新三板3D打印第一股”之称的北京易加两则公告引起3D打印行业和投资者的关注。</a>
+						</div>
+					</div>
+					<div class="news2">
+						<div class="num1"></div>
+						<div class="contentnews">
+							<a href=""><h2>北京易加3D打印应用与制造联合实验室成立</h2></a>
+							<a href=""> 6月9日，“西北师大—北京易加 3D打印应用与制造联合实验室”揭牌成立我司教育应用部核心成员与校...  </a>
+						</div>
+					</div>
+					<div class="news3">
+						<div class="num2"></div>
+						<div class="contentnews">
+							<a href=""><h2> 杭州市副市长张耕一行莅临公司参观调研 </h2></a>
+							<a href="">2015年4月27日下午，杭州市副市长张耕携杭州市科技局、萧山区经信局、萧山区科技局等部门... </a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="contactus">
+		   <div class="comWidth" style="height:auto">
+			<div class="contacttitle">
+				<img src="images/tit4.png">
+			</div>
+			<div class="contactinfo">
+				<div class="contactway1"></div>
+				<div class="contactway2"></div>
+				<div class="contactway3"></div>
+			</div>
+		   </div>
+		</div>
+		<div class="copyright">
+			<div>
+				COPYRIGHT©2014-2020　北京易加　浙ICP备11041139号-1 <br>
+				技术支持： <a href="">诺心网络</a>
+			</div>
+		</div>
+	</footer>
+	<div id="slidebar">
+	    <ul>
+	    	<li class="qqserve"><a href="">QQ客服</a></li>
+	    	<li class="qqserve"><a href="">QQ客服</a></li>
+	    	<li class="qqserve weibo"><a href="">新浪微博</a></li>
+	    </ul>
+	</div>
+	<div class="scrolltoTop" style="display:none">
+	    	<img src="images/topback.png">
 	</div>
 </body>
 </html>
