ie和firefox的兼容解决

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+	<div id="footer">
 		<div class="contactus">
 		   <div class="comWidth" style="height:auto">
 			<div class="contacttitle">
@@ -163,7 +163,7 @@
 				技术支持： <a href="">诺心网络</a>
 			</div>
 		</div>
-	</footer>
+	</div>
 	<div id="slidebar">
 	    <ul>
 	    	<li class="qqserve"><a href="">QQ客服</a></li>
