--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<div class="displaytitle">
 				<img src="images/tit1.png">
 			</div>
+			<div class="comWidth">
 			<div id="container2">
 				<div class="displaypic1">
 				   <div class="displayleft">
@@ -71,6 +72,8 @@
 			</div>
 			<img src="images/pre.png" class="arrow pre">
 			<img src="images/next.png" class="arrow next">
+			</div>
+
 		</div>
 	</div>
 	<div id="aboutus">
